# online_store

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0003_customuser_image.py
core/: admin.py  models.py  serializers.py
online_store/: settings.py  urls.py  wsgi.py
store/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
store/migrations/: 0001_initial.py  0002_alter_productmodel_slug.py  0003_alter_productmodel_manufacturer_and_more.py  0004_alter_productmodel_slug.py  0005_ordermodel_shippingadressmodel_orderitemmodel.py  0006_cartitemmodel_cartmodel_customer_and_more.py  0007_alter_shippingadressmodel_address_ordermodel_and_more.py  0008_rename_products_id_ordermodel_products_ids.py  0009_remove_cartmodel_customer_remove_cartmodel_products_and_more.py  0010_commentmodel.py  0011_ordermodel_products.py  0012_productmodel_favourite.py  0013_alter_productmodel_favourite.py  0014_rename_shippingadressmodel_shippingaddressmodel_and_more.py  0015_rename_slug_productmodel_code_and_more.py  0016_rename_code_productmodel_slug.py  0017_productmodel_code.py  0018_productmodel_category.py  0019_remove_productmodel_code_alter_productmodel_id.py  0020_cart_remove_ordermodel_address_and_more.py  0021_alter_category_slug_alter_category_title_and_more.py  0022_alter_productmodel_bonus.py  0023_productmodel_code.py  0024_alter_productmodel_code.py
